# ray-tracing-gallery

./: .gitignore  .gitmodules  Cargo.toml  build.rs  compile_shaders.bat  lain.glb  lain_model_license.txt  readme.md  rust-toolchain  tori.glb
compile-shaders/: Cargo.toml
compile-shaders/src/: main.rs
resources/: fence.glb  plane.glb
shaders/: Cargo.toml  any_hit_alpha_clip.glsl  any_hit_alpha_clip.spv  closest_hit_common.glsl  closest_hit_mirror.glsl  closest_hit_mirror.spv  closest_hit_portal.glsl  closest_hit_portal.spv  closest_hit_textured.glsl  closest_hit_textured.spv  closest_hit_textured_glsl.spv  closesthit.glsl  closesthit.spv  fullscreen_tri.spv  hit_shader_common.glsl  pbr.glsl  primary_ray_miss.spv  ray-tracing.spv  ray_generation.spv  scratch.glsl  shadow_ray_miss.spv  tonemap.spv
shaders/ray-tracing/: Cargo.toml
shaders/ray-tracing/src/: heatmap.rs  lib.rs  pbr.rs  structs.rs
shaders/src/: lib.rs
shaders/test-shader/: Cargo.toml
shaders/test-shader/src/: lib.rs
shaders/tonemapping/: Cargo.toml
shaders/tonemapping/src/: lib.rs
shared-structs/: Cargo.toml
shared-structs/src/: lib.rs
src/: command_buffer_recording.rs  denoiser.rs  gpu_structs.rs  main.rs  scene.rs  util_functions.rs  util_structs.rs  utils.rs
src/shaders/: closesthit.rchit  closesthit.rchit.glsl  closesthit.rchit.spv  common.glsl  miss.rmiss.spv  raygen.rgen.glsl  raygen.rgen.spv  shadow.rmiss.spv  shadow_denoiser_classify.hlsl  shadow_denoiser_pass_0.hlsl.spv  shadow_denoiser_pass_1.hlsl.spv  shadow_denoiser_pass_2.hlsl.spv  shadow_denoiser_passes.hlsl  shadow_denoiser_passes.hlsl.spv  shadow_denoiser_prepare.hlsl  shadow_denoiser_prepare.hlsl.spv
