[package]
name = "ray-tracing-gallery"
version = "0.1.0"
edition = "2018"
resolver = "2"

[workspace]
members = [".", "shaders"]

[dependencies]
anyhow = "1.0.43"
ash = "0.33.2"
ash-window = "0.7.0"
bytemuck = { version = "1.7.2", features = ["derive"] }
gltf = { version = "0.16.0", default-features = false, features = ["utils"] }
gpu-allocator = "0.9.0"
image = { version = "0.23.14", features = ["png"], default-features = false }
log = "0.4.14"
rand = "0.8.4"
simplelog = "0.10.0"
ultraviolet = { version = "0.8.1", features = ["bytemuck"] }
winit = "0.25.0"

#[profile.dev.package."*"]
#opt-level = 3

[build-dependencies]
# Use Alpha 12
spirv-builder = { git = "https://github.com/EmbarkStudios/rust-gpu.git", rev = "44c9fdd8c511ff14ab64281c54910651fba86a0f", default-features = false, features = ["use-installed-tools"] }
