[package]
name = "ray-tracing-gallery"
version = "0.1.0"
edition = "2018"
resolver = "2"

[workspace]
members = [".", "shaders/ray-tracing", "shaders/test-shader", "compile-shaders"]

[dependencies]
anyhow = "1.0.43"
ash = "0.33.2"
ash-window = "0.7.0"
bytemuck = { version = "1.7.2", features = ["derive"] }
gltf = { version = "0.16.0", default-features = false, features = ["utils"] }
gpu-allocator = { git = "https://github.com/Traverse-Research/gpu-allocator", branch = "rename-allocation" }
image = { version = "0.23.14", features = ["png"], default-features = false }
log = "0.4.14"
rand = "0.8.4"
simplelog = "0.10.0"
ultraviolet = { version = "0.8.1", features = ["bytemuck"] }
winit = "0.25.0"

[profile.dev.package."*"]
opt-level = 3
