[package]
name = "ray-tracing-gallery"
version = "0.1.0"
edition = "2018"
resolver = "2"

[workspace]
members = [".", "shaders/ray-tracing", "shaders/tonemapping", "compile-shaders", "shared-structs"]

[dependencies]
anyhow = "1.0.43"
ash = "0.33.2"
ash-window = "0.7.0"
bytemuck = { version = "1.7.2", features = ["derive"] }
gltf = { version = "0.16.0", default-features = false, features = ["utils"] }
gpu-allocator = "0.10.0"
image = { version = "0.23.14", features = ["png"], default-features = false }
log = "0.4.14"
rand = "0.8.4"
simplelog = "0.10.0"
structopt = "0.3.23"
ultraviolet = { version = "0.8.1", features = ["bytemuck"] }
winit = "0.25.0"
shared-structs = { path = "shared-structs" }
glam = "0.19.0"
vk-sync = { package = "vk-sync-fork", version = "0.2.0" }
egui-winit-ash-integration = "0.2.0"
parking_lot = "0.11.2"
egui = "0.14.0"
ash-opinionated-abstractions = { git = "https://github.com/expenses/ash-opinionated-abstractions" }
colstodian = "0.1.0-rc.3"

[profile.dev.package."*"]
opt-level = 3

[patch.crates-io]
# For https://github.com/MaikKlein/ash/pull/476
ash = { git = "https://github.com/MaikKlein/ash", rev = "e10bbf3063d9b84b9d8c04e6e2baae7d4881cce4" }
ash-window = { git = "https://github.com/MaikKlein/ash", rev = "e10bbf3063d9b84b9d8c04e6e2baae7d4881cce4" }
