[package]
name = "compile-shaders"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
spirv-builder = { git = "https://github.com/EmbarkStudios/rust-gpu", rev = "14e2152198377311aa4c809e879609cf39d2713d", default-features = false, features = ["use-installed-tools"] }
