[package]
name = "compile-shaders"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
spirv-builder = { git = "https://github.com/EmbarkStudios/rust-gpu", rev = "f8a1130377a4a500ff05d1058b29c8f1a42f2d80", default-features = false, features = ["use-installed-tools"] }
