[package]
name = "compile-shaders"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
spirv-builder = { git = "https://github.com/expenses/rust-gpu", branch = "printf-plus-convert-u-to-ptr", default-features = false, features = ["use-installed-tools"] }
