[package]
name = "ray-tracing-shaders"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["dylib", "lib"]

[dependencies]
spirv-std = { git = "https://github.com/expenses/rust-gpu", branch = "add-unsigned-glsl-functions", features = ["glam"] }
shared-structs = { path = "../../shared-structs" }
