[package]
name = "ray-tracing-shaders"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["dylib", "lib"]

[dependencies]
spirv-std = { git = "https://github.com/EmbarkStudios/rust-gpu", rev = "f8a1130377a4a500ff05d1058b29c8f1a42f2d80", features = ["glam"] }
shared-structs = { path = "../../shared-structs" }
